--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,16 @@ h6 {
   object-fit: contain;
 }
 
+.buttons-profile__button-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 35px;
+}
+.buttons-profile__button-icon img {
+  max-width: 100%;
+}
+
 .page_dark {
   background-color: #151515;
   color: #fff;
